--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "src/**/*.js"],
     "exclude": ["node_modules"]
   }
