--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   },
   "homepage": "https://github.com/dhruv7393/TestBackend#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.21",
     "ts-node": "^10.9.2",
