--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "axios": "^1.7.7",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "cron": "^3.1.8",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.2.0",
-    "node-cron": "^3.0.3"
+    "mongoose": "^8.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
