--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dhruvtodo": "^1.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.2.0"
@@ -31,8 +32,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.21",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "nodemon": "^3.1.0"
+    "typescript": "^5.3.3"
   }
 }
